--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
         <div class="col-md-4">
           <div class="card h-100 border-0 shadow-sm tour-card">
-            <img src="../pictures/japan.jpg" class="card-img-top" alt="Japan" />
+            <img src="pictures/japan.jpg" class="card-img-top" alt="Japan" />
             <div class="card-body">
               <h5 class="card-title fw-bold">Khám phá Nhật Bản</h5>
               <p class="card-text text-muted small">
